2007-01-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Better title for plots with scans forward and
	backward.

2007-01-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (pr_encoding) term/x11.trm share/Gnuplot.app-defaults:
	Gnuplot_x11 has been using a default encoding *-* for x11 fonts. There
	is a bug in xorg-7.1 that causes this to fail. So we now provide an
	optional X-resource that can be used to set the default encoding to
	something else.  E.g.:
	    echo "gnuplot*encoding: iso8859-15" | xrdb -merge

2007-01-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Update current color in 
	plot->current_rgb when setting color from a Palette. Bugfix.

2007-01-09  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.texi: Sync with current docs

2007-01-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Add error return check after calling gdImageCreate. This
	was not a useful check in earlier versions of libgd, but 2.0.34 will
	introduce serious sanity checking at the time of image creation.

2006-12-31  Ethan Merritt  <merritt@u.washington.edu>

	* docs/term-ja.diff: Sync with current terminal source files.

2006-12-28  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/datafile.c (isanumber_pn, isatuple, token2double):
	Removed these functions as they repeat behavior of and somewhat
	inconsistent with real(const_express()).
	(plot_option_array): Use : instead of , for separator between elements.
	(token2tuple): Use real(const_express()) to parse image parameters.
	This allows variables to be used in image specs.
	(plot_option_comma_separated): Changed "comma_separated" to
	"multivalued" everywhere.  Changed the separator to a colon rather than
	a comma since the comma conflicts with the separator between multiple
	plots within a plot command.  The colon is also more consistent with the
	separator used in other commands like "using".
